Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/T4738171.out
T4738171.java:11:14: compiler.err.non-static.cant.be.ref: kindname.type.variable, T
1 error
